default/objects/E2E_Form_Ru_Internal_Notifications__c/E2E_Form_Ru_Internal_Notifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Form Ru Internal Notifications</label>
</CustomObject>