default/objects/E2E_Form_Ru_Internal_Notifications__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>Name of the Email Template (E2E RU dir)</description>
    <inlineHelpText>Name of the Email Template (E2E RU dir)</inlineHelpText>
    <label>Email Body</label>
    <type>TextArea</type>
</CustomField>