default/objects/E2E_Form_Ru_Internal_Notifications__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <type>TextArea</type>
</CustomField>