default/objects/E2E_Form_Ru_Internal_Notifications__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>fields of the E2E_Form_Ru_General_Settings__c (E2EFormRu) object separated by the &quot;;&quot;. 
Example: &quot;Call_Center_Managers__c; External_Main_Managers__c&quot;</description>
    <inlineHelpText>fields of the E2E_Form_Ru_General_Settings__c (E2EFormRu) object separated by the &quot;;&quot;. 
Example: &quot;Call_Center_Managers__c; External_Main_Managers__c&quot;</inlineHelpText>
    <label>Recipients</label>
    <type>TextArea</type>
</CustomField>